# nanobot-feishu-persistent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/nanobot_feishu_persistent/: __init__.py  breadcrumb.py  channel.py  cli.py  index.py  paths.py  recall.py  session.py
tests/: test_breadcrumb.py  test_cli.py  test_index.py  test_recall.py  test_session_recent.py
