[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-feishu-persistent"
version = "0.1.0"
description = "Persistent, recallable Feishu image history for nanobot — plugin + CLI (nbfp)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "T-Chen-CN" }]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.optional-dependencies]
nanobot = []
dev = ["pytest>=7"]

[project.entry-points."nanobot.channels"]
feishu_persistent = "nanobot_feishu_persistent.channel:FeishuPersistentChannel"

[project.scripts]
nbfp = "nanobot_feishu_persistent.cli:main"

[project.urls]
Homepage = "https://github.com/T-Chen-CN/nanobot-feishu-persistent"
Issues = "https://github.com/T-Chen-CN/nanobot-feishu-persistent/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
